# numberCalculation

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: number.h  rational.h
src/: number.cpp  rational.cpp
tests/: CMakeLists.txt  Number-add-001-zzz.cpp  Number-div-001-zzz.cpp  Number-mul-001-zzz.cpp  Number-sub-001-zzz.cpp  Rational-add-001-bub.cpp  Rational-add-int-001-zzz.cpp  assert.h
